fix: fix view on mobile and table view

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,6 +102,19 @@
   }
 }
 
+.extra-w {
+  -webkit-text-stroke: 0.1rem;
+  -webkit-text-stroke-width: 0.1rem;
+}
+.mid-extra-w {
+  -webkit-text-stroke: 0.08rem;
+  -webkit-text-stroke-width: 0.08rem;
+}
+.less-extra-w {
+  -webkit-text-stroke: 0.05rem;
+  -webkit-text-stroke-width: 0.05rem;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
